--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "cors": "^2.8.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "mongoose": "^6.6.5",
+    "pdfmake": "^0.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
+    "react-pdfmake": "^0.3.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
